--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "react-dom": "latest",
     "tailwindcss": "latest"
   },
+  "devDependencies": {
+    "typescript": "^5.4.0",
+    "@types/react": "^18.2.0",
+    "@types/node": "^20.11.0"
+  },
   "engines": {
   "node": "20.x"
 }
