--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "latest",
     "react-dom": "latest",
     "tailwindcss": "latest"
+     "resend": "^1.0.0"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
