--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "postcss": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "tailwindcss": "latest"
+    "tailwindcss": "latest",
      "resend": "^1.0.0"
   },
   "devDependencies": {
