--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "typescript": "^5.4.0",
     "@types/react": "^18.2.0",
     "@types/node": "^20.11.0",
-    "@tailwindcss/postcss": "^1.0.0"
+    "tailwindcss": "^4.0.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0"
   },
   "engines": {
   "node": "20.x"
