--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@types/node": "^20.11.0",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.14"
+    "autoprefixer": "^10.4.14",
+    "@types/uuid": "^9.0.0"
   },
   "engines": {
   "node": "20.x"
