--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "tailwindcss": "latest",
     "resend": "^1.0.0",
     "@supabase/supabase-js": "^2.39.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "axios": "^1.5.0"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
