--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "resend": "^1.0.0",
     "@supabase/supabase-js": "^2.39.5",
     "uuid": "^9.0.0",
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "stripe": "^12.18.0"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
