--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.21",
     "autoprefixer": "^10.4.14",
-    "@types/uuid": "^9.0.0"
+    "@types/uuid": "^9.0.0",
+    "@types/stripe": "^12.0.0"
   },
   "engines": {
   "node": "20.x"
