--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@supabase/supabase-js": "^2.39.5",
     "uuid": "^9.0.0",
     "axios": "^1.5.0",
-    "stripe": "^11.15.0",
-    "@types/stripe": "^11.0.0"
+    "stripe": "^12.18.0"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
