--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@supabase/supabase-js": "^2.39.5",
     "uuid": "^9.0.0",
     "axios": "^1.5.0",
-    "stripe": "^12.18.0"
+    "stripe": "^12.18.0",
+    "micro": "^9.3.4"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
