--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "axios": "^1.5.0",
     "stripe": "^12.18.0",
     "micro": "^9.3.4",
-    "recharts": "^2.8.0"
+    "recharts": "^2.8.0",
+     "papaparse": "^5.4.1"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
