--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.21",
     "autoprefixer": "^10.4.14",
-    "@types/uuid": "^9.0.0"
+    "@types/uuid": "^9.0.0",
+    "@types/papaparse": "^5.2.7"
   },
   "engines": {
   "node": "20.x"
