--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "functions": {
     "api/stripe-webhook.ts": {
+      "runtime": "nodejs18.x",
       "memory": 128,
-      "maxDuration": 10,
-      "runtime": "nodejs18.x"
+      "maxDuration": 10
     }
   }
 }
